@@ -22,7 +22,7 @@ breaks: xserver-xorg-input-vmmouse (<< 1:13.0.99)
 
 [relations]
 gcc-6: gcc-6 (>= 6.3.0-18+deb9u1~) <!stage1 !cross !pkg.linux.nokernel>, gcc-6-@gnu-type-package@ (>= 6.3.0-18+deb9u1~) <!stage1 cross !pkg.linux.nokernel>
-headers%gcc-6: linux-compiler-gcc-6-x86 (>= 4.14.17-1~)
+headers%gcc-6: linux-compiler-gcc-6-x86 (>= 4.9.82-1+deb9u1~), linux-compiler-gcc-6-x86 (<< 4.10~) | linux-compiler-gcc-6-x86 (>= 4.14.17-1~)
 
 [686_description]
 hardware: older PCs
